--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Кликер</title>
+    <title>🕹️ Кликер</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Montserrat', Arial, sans-serif;
-            background: linear-gradient(135deg, #232526 0%, #414345 100%);
+            background: var(--bg, linear-gradient(135deg, #232526 0%, #414345 100%));
             color: #fff;
             min-height: 100vh;
             margin: 0;
@@ -16,12 +16,16 @@
             flex-direction: column;
             align-items: center;
             justify-content: flex-start;
+            transition: background 0.5s;
         }
         h1 {
             margin-top: 32px;
             font-size: 2.5em;
             letter-spacing: 2px;
             text-shadow: 0 4px 24px #000a;
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
         .score {
             font-size: 2.5em;
@@ -35,16 +39,36 @@
             margin: 18px 0 30px 0;
             border: none;
             border-radius: 18px;
-            background: linear-gradient(90deg, #43cea2 0%, #185a9d 100%);
+            background: var(--btn, linear-gradient(90deg, #43cea2 0%, #185a9d 100%));
             color: #fff;
             font-weight: 700;
             box-shadow: 0 6px 24px #185a9d55;
             cursor: pointer;
-            transition: transform 0.1s, box-shadow 0.1s;
+            transition: transform 0.1s, box-shadow 0.1s, background 0.5s;
+            position: relative;
+            z-index: 2;
         }
         .main-btn:active {
             transform: scale(0.97);
             box-shadow: 0 2px 8px #185a9d33;
+        }
+        .main-btn.crit {
+            animation: crit 0.4s;
+            background: linear-gradient(90deg, #ff512f 0%, #dd2476 100%);
+            box-shadow: 0 0 40px #ff512f99;
+        }
+        @keyframes crit {
+            0% { transform: scale(1); }
+            30% { transform: scale(1.2) rotate(-5deg); }
+            60% { transform: scale(1.1) rotate(5deg); }
+            100% { transform: scale(1); }
+        }
+        .main-btn.pulse {
+            animation: pulse 0.3s;
+        }
+        @keyframes pulse {
+            0% { box-shadow: 0 0 0 0 #43cea288; }
+            100% { box-shadow: 0 0 0 20px #43cea200; }
         }
         .upgrades {
             display: flex;
@@ -114,6 +138,80 @@
             color: #b2f7ef;
             text-shadow: 0 1px 4px #0008;
         }
+        .chest-btn {
+            margin: 18px 0 0 0;
+            font-size: 1.2em;
+            padding: 12px 32px;
+            border-radius: 12px;
+            border: none;
+            background: linear-gradient(90deg, #f7971e 0%, #ffd200 100%);
+            color: #222;
+            font-weight: 700;
+            cursor: pointer;
+            box-shadow: 0 2px 12px #ffd20055;
+            transition: background 0.2s;
+        }
+        .chest-btn:active {
+            background: linear-gradient(90deg, #ffd200 0%, #f7971e 100%);
+        }
+        .daily-btn {
+            margin: 18px 0 0 0;
+            font-size: 1.1em;
+            padding: 8px 24px;
+            border-radius: 10px;
+            border: none;
+            background: linear-gradient(90deg, #43cea2 0%, #185a9d 100%);
+            color: #fff;
+            font-weight: 700;
+            cursor: pointer;
+            box-shadow: 0 2px 8px #185a9d33;
+        }
+        .daily-btn:active {
+            background: linear-gradient(90deg, #185a9d 0%, #43cea2 100%);
+        }
+        .achievements {
+            margin: 18px 0 0 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+        }
+        .ach {
+            background: #222b;
+            color: #ffd200;
+            border-radius: 8px;
+            padding: 4px 12px;
+            font-size: 1em;
+            font-weight: 700;
+            box-shadow: 0 1px 4px #ffd20044;
+        }
+        .theme-btns {
+            margin: 18px 0 0 0;
+            display: flex;
+            gap: 10px;
+            justify-content: center;
+        }
+        .theme-btn {
+            border: none;
+            border-radius: 8px;
+            padding: 6px 18px;
+            font-size: 1em;
+            font-weight: 700;
+            cursor: pointer;
+            background: #333;
+            color: #fff;
+            transition: background 0.2s;
+        }
+        .theme-btn.selected {
+            background: #ffd200;
+            color: #222;
+        }
+        .confetti {
+            position: fixed;
+            left: 0; top: 0; width: 100vw; height: 100vh;
+            pointer-events: none;
+            z-index: 9999;
+        }
         @media (max-width: 600px) {
             .score { font-size: 2em; }
             .main-btn { font-size: 1.2em; padding: 12px 20px; }
@@ -122,7 +220,7 @@
     </style>
 </head>
 <body>
-    <h1>🕹️ Кликер</h1>
+    <h1>🎮 Кликер</h1>
     <div class="score" id="score">Загрузка...</div>
     <button class="main-btn" id="clickBtn">Клик!</button>
     <div class="upgrades">
@@ -145,7 +243,12 @@
     <div class="boost-bar" id="boostBar" style="display:none;">
         <div class="boost-bar-inner" id="boostBarInner" style="width:0%"></div>
     </div>
+    <button class="chest-btn" id="chestBtn" style="display:none;">Открыть сундук 🎁</button>
+    <button class="daily-btn" id="dailyBtn">Ежедневный бонус</button>
     <div class="info" id="info"></div>
+    <div class="achievements" id="achievements"></div>
+    <div class="theme-btns" id="themeBtns"></div>
+    <canvas class="confetti" id="confetti" style="display:none;"></canvas>
     <script>
         let user_id = null;
         if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe && Telegram.WebApp.initDataUnsafe.user) {
@@ -153,6 +256,7 @@
         } else {
             user_id = prompt('Введите ваш user_id (для теста):');
         }
+        let lastScore = 0;
         async function fetchStatus() {
             const res = await fetch(`/api/get?user_id=${user_id}`);
             const data = await res.json();
@@ -172,24 +276,121 @@
             } else {
                 document.getElementById('boostBar').style.display = 'none';
             }
-            document.getElementById('info').innerHTML = info;
+            // Прогресс до сундука
+            let clicks = data.clicks || 0;
+            let toChest = 50 - (clicks % 50);
+            info += ` | До сундука: ${toChest}`;
+            // Сундук
+            document.getElementById('chestBtn').style.display = data.chest_ready ? '' : 'none';
+            // Ачивки
+            let achs = data.achievements || [];
+            let achHtml = '';
+            if (achs.includes('100_clicks')) achHtml += '<span class="ach">💯 100 кликов</span>';
+            if (achs.includes('10_mult')) achHtml += '<span class="ach">🔟 10 множителей</span>';
+            document.getElementById('achievements').innerHTML = achHtml;
+            // Темы
+            fetchThemes(data.theme);
+            lastScore = data.score;
         }
         document.getElementById('clickBtn').onclick = async () => {
-            await fetch(`/api/click?user_id=${user_id}`, {method: 'POST'});
+            let btn = document.getElementById('clickBtn');
+            btn.classList.add('pulse');
+            setTimeout(()=>btn.classList.remove('pulse'), 300);
+            const res = await fetch(`/api/click?user_id=${user_id}`, {method: 'POST'});
+            const data = await res.json();
             fetchStatus();
+            if (data.is_crit) {
+                btn.classList.add('crit');
+                showConfetti();
+                setTimeout(()=>btn.classList.remove('crit'), 400);
+            }
+            if (data.chest) {
+                document.getElementById('chestBtn').style.display = '';
+            }
+            if (data.new_ach) {
+                showConfetti();
+            }
         };
         document.getElementById('autoClickBtn').onclick = async () => {
             await fetch(`/api/upgrade?user_id=${user_id}&type=auto_click`, {method: 'POST'});
             fetchStatus();
+            showConfetti();
         };
         document.getElementById('multiplierBtn').onclick = async () => {
             await fetch(`/api/upgrade?user_id=${user_id}&type=multiplier`, {method: 'POST'});
             fetchStatus();
+            showConfetti();
         };
         document.getElementById('boostBtn').onclick = async () => {
             await fetch(`/api/upgrade?user_id=${user_id}&type=boost`, {method: 'POST'});
             fetchStatus();
+            showConfetti();
         };
+        document.getElementById('chestBtn').onclick = async () => {
+            const res = await fetch(`/api/chest?user_id=${user_id}`, {method: 'POST'});
+            const data = await res.json();
+            alert(data.msg);
+            fetchStatus();
+            showConfetti();
+        };
+        document.getElementById('dailyBtn').onclick = async () => {
+            const res = await fetch(`/api/daily?user_id=${user_id}`, {method: 'POST'});
+            const data = await res.json();
+            alert(data.msg);
+            fetchStatus();
+            showConfetti();
+        };
+        async function fetchThemes(current) {
+            const res = await fetch('/api/themes');
+            const data = await res.json();
+            let html = '';
+            for (let t of data.themes) {
+                html += `<button class="theme-btn${current===t?' selected':''}" onclick="setTheme('${t}')">${t}</button>`;
+            }
+            document.getElementById('themeBtns').innerHTML = html;
+        }
+        window.setTheme = async function(theme) {
+            await fetch(`/api/theme?user_id=${user_id}&theme=${theme}`, {method: 'POST'});
+            if (theme==='default') document.body.style.setProperty('--bg', 'linear-gradient(135deg, #232526 0%, #414345 100%)');
+            if (theme==='dark') document.body.style.setProperty('--bg', 'linear-gradient(135deg, #141e30 0%, #243b55 100%)');
+            if (theme==='neon') document.body.style.setProperty('--bg', 'linear-gradient(135deg, #00c3ff 0%, #ffff1c 100%)');
+            if (theme==='sunset') document.body.style.setProperty('--bg', 'linear-gradient(135deg, #ff512f 0%, #dd2476 100%)');
+            fetchStatus();
+        }
+        // Конфетти
+        function showConfetti() {
+            let canvas = document.getElementById('confetti');
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            canvas.style.display = '';
+            let ctx = canvas.getContext('2d');
+            let pieces = [];
+            for (let i=0; i<80; ++i) {
+                pieces.push({
+                    x: Math.random()*canvas.width,
+                    y: Math.random()*canvas.height/2,
+                    r: 6+Math.random()*8,
+                    c: `hsl(${Math.random()*360},100%,60%)`,
+                    v: 2+Math.random()*4
+                });
+            }
+            let t=0;
+            function draw() {
+                ctx.clearRect(0,0,canvas.width,canvas.height);
+                for (let p of pieces) {
+                    ctx.beginPath();
+                    ctx.arc(p.x, p.y, p.r, 0, 2*Math.PI);
+                    ctx.fillStyle = p.c;
+                    ctx.fill();
+                    p.y += p.v;
+                    if (p.y > canvas.height) p.y = -10;
+                }
+                t++;
+                if (t<40) requestAnimationFrame(draw);
+                else canvas.style.display = 'none';
+            }
+            draw();
+        }
         fetchStatus();
         setInterval(fetchStatus, 2000);
     </script>
